--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
       <artifactId>ojdbc</artifactId>
       <version>7</version>
        <scope>system</scope>
-       <systemPath>C:\External-Jars\ojdbc7-12.1.0.2.jar</systemPath> <!-- must match file name -->
+       <systemPath>${basedir}\Lib\ojdbc7-12.1.0.2.jar</systemPath> <!-- must match file name -->
      </dependency>
      <dependency>
 	   <groupId>org.apache.poi</groupId>
@@ -68,6 +68,31 @@
        <artifactId>extentreports</artifactId>
        <version>2.41.2</version>
      </dependency>
+     <dependency>
+		  <groupId>info.cukes</groupId>
+	      <artifactId>cucumber-java</artifactId>
+	      <version>1.2.4</version>
+		</dependency>
+		<dependency>
+		  <groupId>info.cukes</groupId>
+	      <artifactId>cucumber-picocontainer</artifactId>
+	      <version>1.2.4</version>
+		</dependency>
+		<dependency>
+         <groupId>info.cukes</groupId>
+         <artifactId>cucumber-core</artifactId>
+         <version>1.2.4</version>
+        </dependency>
+		<dependency>
+         <groupId>info.cukes</groupId>
+         <artifactId>gherkin</artifactId>
+         <version>2.12.2</version>
+        </dependency>
+        <dependency>
+		  <groupId>info.cukes</groupId>
+		  <artifactId>cucumber-testng</artifactId>
+		  <version>1.2.2</version>
+		</dependency>
   </dependencies>
   <build>
    <plugins>
